calc graph for 24h
